tests/baselines/reference/declarationEmitDefaultExport7.errors.txt
tests/cases/compiler/declarationEmitDefaultExport7.ts(2,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/compiler/declarationEmitDefaultExport7.ts(2,1): error TS4081: Default export of the module has or is using private name 'A'.


==== tests/cases/compiler/declarationEmitDefaultExport7.ts (2 errors) ====
    class A {}
    export default new A();
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4081: Default export of the module has or is using private name 'A'.
    